@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Improvements::
 
 * bypass any dry run logic if remaining height on page is less than heading font size
+* update import_page method on converter to return true if page was imported (nil otherwise), on par with the functionality of method it replaces
 
 == 2.3.23 (2025-10-26) - @mojavelinux
 
